<resources>

    <string name="app_name">AppGithub User</string>
    <string name="location_string">LOCATION :</string>
    <string name="logo_location">logo location</string>
    <string name="company_string">COMPANY :</string>
    <string name="logo_company">logo company</string>
    <string name="repository_string">REPOSITORY :</string>
    <string name="logo_repository">logo repository</string>
    <string name="username_string">USERNAME :</string>
    <string name="logo_username">logo username</string>
    <string name="following_string">Following</string>
    <string name="followers_string">Followers</string>
    <string name="image_header">image header</string>
    <string name="image_place">image place</string>
    <string name="image_company">image company</string>
    <string name="follower_string">FOLLOWER:</string>
    <string name="followings_string">FOLLOWING:</string>

    <string-array name="username">
        <item>juliarman</item>
        <item>jakewharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Juliarman Umar</item>
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Makassar, Indonesia</item>
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>231</item>
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Dicoding Academy</item>
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>902</item>
        <item>595</item>
        <item>513</item>
        <item>772</item>
        <item>125</item>
        <item>788</item>
        <item>128</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>90</item>
        <item>12</item>
        <item>23</item>
        <item>42</item>
        <item>15</item>
        <item>34</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>130</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/juliarman</item>
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>

</resources>


