<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:padding="60dp"
    android:gravity="center"
    tools:context=".DetailGithubActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:src="@drawable/user1"
        />

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/follow_text"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_marginEnd="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_string"
                    android:textSize="20sp"
                    />

                <TextView
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_string"
                    android:textSize="20sp"
                    />



            </LinearLayout>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/follow"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">


                <TextView
                    android:id="@+id/tv_data_follower"
                    android:layout_marginEnd="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    />

                <TextView
                    android:id="@+id/tv_data_following"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    />




            </LinearLayout>

        </RelativeLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        >


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           tools:ignore="UselessParent">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

           <ImageView
               android:id="@+id/iv_user"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/user"
               android:contentDescription="@string/logo_username" />

           <TextView
               android:id="@+id/tv_usernamee"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/username_string"
               android:layout_marginStart="16dp"
               android:layout_toEndOf="@id/iv_user"/>

           <TextView
               android:id="@+id/tv_user_name"
               android:layout_toEndOf="@id/tv_usernamee"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="15dp"
               android:textStyle="bold"

               />
           </RelativeLayout>




           <RelativeLayout
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/iv_company"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/company"
                   android:contentDescription="@string/logo_company" />

               <TextView
                   android:id="@+id/tv_companyy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/company_string"
                   android:layout_marginStart="13dp"
                   android:layout_toEndOf="@id/iv_company"/>

               <TextView
                   android:id="@+id/tv_company_data"
                   android:layout_toEndOf="@id/tv_companyy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   android:textStyle="bold"
                   />
           </RelativeLayout>





           <RelativeLayout
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/iv_location"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/place"
                   android:contentDescription="@string/logo_location" />

               <TextView
                   android:id="@+id/tv_locationn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/location_string"
                   android:layout_marginStart="17dp"
                   android:layout_toEndOf="@id/iv_location"/>

               <TextView
                   android:id="@+id/tv_location_data"
                   android:layout_toEndOf="@id/tv_locationn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   android:textStyle="bold"
                   />
           </RelativeLayout>





           <RelativeLayout
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/iv_rep"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/repo"
                   android:contentDescription="@string/logo_repository" />

               <TextView
                   android:id="@+id/tv_repoo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/repository_string"
                   android:layout_marginStart="12dp"
                   android:layout_toEndOf="@id/iv_rep"/>

               <TextView
                   android:id="@+id/tv_repository"
                   android:layout_toEndOf="@id/tv_repoo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:layout_marginStart="15dp"
                   android:textStyle="bold"
                   />
           </RelativeLayout>




       </LinearLayout>




    </RelativeLayout>

</LinearLayout>