<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardCornerRadius="4dp"
    android:focusable="true">


    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:src="@drawable/user1"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_toEndOf="@+id/img_user"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/img_place"
            android:layout_below="@id/tv_name"
            android:layout_toEndOf="@id/img_user"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/place"
            android:contentDescription="@string/image_place" />

        <TextView

            android:id="@+id/tv_place"
            android:layout_toEndOf="@id/img_place"
            android:layout_below="@id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="11sp"
            tools:ignore="SmallSp" />


        <ImageView
            android:id="@+id/img_company"
            android:layout_below="@id/img_place"
            android:layout_toEndOf="@id/img_user"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/company"
            android:contentDescription="@string/image_company" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_toEndOf="@id/img_company"
            android:layout_below="@id/tv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_toEndOf="@id/img_user"
            android:layout_below="@id/img_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:text="@string/follower_string"
            android:textStyle="bold"
            />

            <TextView
                android:id="@+id/tv_card_follower"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"

                />


            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginTop="8dp"
                android:text="@string/followings_string"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_card_following"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"

                />

        </LinearLayout>


    </RelativeLayout>



</androidx.cardview.widget.CardView>